Changed footer credit

--- a/contact.html
+++ b/contact.html
@@ -158,7 +158,7 @@
         </div>
 
         <div class="footer_copyright">
-            <small>Copyright &copy; Habibur Rahman from 5th semester</small>
+            <small>Copyright &copy; <a href="team.html">Team CmT</a></small>
         </div>
 
     </footer>
