Footer text changed

--- a/team.html
+++ b/team.html
@@ -95,7 +95,7 @@
                     <h4>Greenland Polytechnic Institute</h4>
                 </a>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, veritatis!
+                    As engineers, we were going to be in a position to change the world – not just study it
                 </p>
             </div>
 
