added new testimonial

--- a/index.html
+++ b/index.html
@@ -168,6 +168,22 @@
                 </div>
             </article>
 
+            <article class="testimonial swiper-slide">
+                <div class="avatar">
+                    <img src="./images/avatar3.jpg">
+                </div>
+                <div class="testimonial_info">
+                    <h5>Rashed</h5>
+                    <small>Student</small>
+                </div>
+
+                <div class="testimonial_body">
+                    <p>
+                     Ami sobar bondhu Rashed. GPI er sobaike amar valo lage. 
+                    </p>
+                </div>
+            </article>
+
             
 
         </div>
